welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:7: error: illegal start of simple expression
        for (i <- 1 to 7)} {
                         ^Methods:7: error: ';' expected but '{' found.
        for (i <- 1 to 7)} {
                           ^